feat: better axis titles

--- a/tso/measurements/simulation-viz.ipynb
+++ b/tso/measurements/simulation-viz.ipynb
@@ -67,14 +67,14 @@
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(battery_n_batteries, average_frequency)\n",
     "    plt.xlabel('Total number of batteries')\n",
-    "    plt.ylabel('Average Frequency')\n",
+    "    plt.ylabel('Average Frequency (Hz)')\n",
     "    plt.title('Average Frequency')\n",
     "    plt.show()\n",
     "    \n",
     "    # Plot Frequency Std Dev\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(battery_n_batteries, frequency_std_dev)\n",
-    "    plt.xlabel('Battery Pods * Number of Batteries')\n",
+    "    plt.xlabel('Total number of batteries')\n",
     "    plt.ylabel('Frequency Std Dev')\n",
     "    plt.title('Frequency Std Dev')\n",
     "    plt.show()\n",
@@ -82,8 +82,8 @@
     "    # Plot Max Frequency\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(battery_n_batteries, max_frequency)\n",
-    "    plt.xlabel('Battery Pods * Number of Batteries')\n",
-    "    plt.ylabel('Max Frequency')\n",
+    "    plt.xlabel('Total number of batteries')\n",
+    "    plt.ylabel('Max Frequency (Hz)')\n",
     "    plt.title('Max Frequency')\n",
     "    ax = plt.gca()\n",
     "    ax.yaxis.set_major_formatter(ticker.FormatStrFormatter('%.6f'))\n",
@@ -94,8 +94,8 @@
     "    # Plot Min Frequency\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(battery_n_batteries, min_frequency)\n",
-    "    plt.xlabel('Battery Pods * Number of Batteries')\n",
-    "    plt.ylabel('Min Frequency')\n",
+    "    plt.xlabel('Total number of batteries')\n",
+    "    plt.ylabel('Min Frequency (Hz)')\n",
     "    plt.title('Min Frequency')\n",
     "    ax = plt.gca()\n",
     "    ax.yaxis.set_major_formatter(ticker.FormatStrFormatter('%.6f'))\n",
